--- a/portfolio.html
+++ b/portfolio.html
@@ -102,8 +102,6 @@
                 </div>
             </div>
         </div>
-        <!-- Header End -->
-        <!-- Services Area Start -->
         <section class="services-area  services-padding">
             <div class="container">
                 <div class="project-heading mb-35">
@@ -111,7 +109,7 @@
                         <div class="col-lg-6">
                             <!-- Section Tittle -->
                             <div class="section-tittle">
-                                <h2>What Services you will Get from me!</h2>
+                                <h2>Our Recent Project: </h2>
                             </div>
                         </div>
 
@@ -130,37 +128,237 @@
                                         <div class="col-lg-4 col-md-4 col-sm-4">
                                             <div class="row">
                                                 <div class="col-lg-12">
-                                                    <!-- Single -->
-                                                    <div class="single-services mb-30">
-                                                        <img src="assets/img/service/services2.png" alt="">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/auxilionetwork.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://auxilionetwork.com" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
                                                     </div>
                                                 </div>
+                                            </div>
+                                        </div>
 
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/portbot.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://portboard.net" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <!-- Single -->
-                                            <div class="single-services mb-30">
-                                                <img src="assets/img/service/services4.png" alt="">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/mipaquete.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://mipaquete.net" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
+
+
                                         <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <!-- Single -->
-                                            <div class="single-services mb-30">
-                                                <img src="assets/img/service/services5.png" alt="">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/abodio.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://abodio.ai" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/istotne.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://istotne.pl/boleslawiec" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/atithibhavan.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://www.atithibhavan.com" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/caronphone.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://www.caronphone.com" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/cipherwebinfotech.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://www.cipherwebinfotech.com"
+                                                                class="view-button" target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/codingcommunity.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://codingcommunity.in" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <!-- Single Project -->
+                                                    <div class="single-services mb-30" style="position: relative;">
+                                                        <div class="image-container"
+                                                            style="position: relative; width: 370px; height: 370px;">
+
+                                                            <img src="assets/img/project/skdreamcash.png"
+                                                                style="width: 100%; height: 100%;"
+                                                                style="border: 2px solid #000;" alt="Project Image">
+
+                                                            <a href="https://www.skdreamcash.in" class="view-button"
+                                                                target="_blank">
+                                                                View
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
 
                         </div>
-                        <!-- End Nav Card -->
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Services Area End -->
 
     </main>
     <footer>
@@ -227,7 +425,22 @@
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
 
+    <script>
+        // Event listener for hover to show/hide the "View" button
+        document.querySelectorAll('.image-container').forEach(container => {
+            container.addEventListener('mouseenter', function () {
+                const viewButton = this.querySelector('.view-button');
+                viewButton.style.display = 'inline-block';
+                viewButton.style.opacity = '1';
+            });
 
+            container.addEventListener('mouseleave', function () {
+                const viewButton = this.querySelector('.view-button');
+                viewButton.style.display = 'none';
+                viewButton.style.opacity = '0';
+            });
+        });
+    </script>
     <!-- JS here -->
     <!-- All JS Custom Plugins Link Here here -->
     <script src="./assets/js/vendor/modernizr-3.5.0.min.js"></script>
