add image reduis

--- a/maintenance-support.html
+++ b/maintenance-support.html
@@ -228,6 +228,7 @@
         <!-- Contact Info End -->
 
     </main>
+
     <footer>
         <!-- Footer Start-->
         <div class="footer-area">
@@ -239,7 +240,7 @@
                                 <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
                                 <h4 style="color: white;">
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
+                                        style="color: white;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
                                 <p>485446,Nagod Satna Madhya Pradesh India</p>
 
