--- a/services.html
+++ b/services.html
@@ -210,6 +210,7 @@
         </section>
         <!-- Want To Work End -->
         <!-- Brand Area Start -->
+        <!-- Brand Area Start -->
         <div class="brand-area section-padding30">
 
             <div class="container">
@@ -224,13 +225,13 @@
                 <div class="brand-active brand-border pt-50 pb-40">
                     <div class="single-brand" style="position: relative; display: inline-block;">
                         <div class="brand-overlay" style="position: relative;">
-                            <img src="assets/img/aviansoft.png" alt="Aviansoft" width="200px"
+                            <img src="assets/img/aviansoft.png" alt="Aviansoft" width="150px"
                                 style="transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
-                        position: absolute; bottom: 10px; left: 0; width: 100%;
-                        text-align: center; font-size: 16px; font-weight: bold; 
-                        color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
-                        transition: opacity 0.3s ease;">
+                                position: absolute; bottom: 10px; left: 0; width: 100%;
+                                text-align: center; font-size: 16px; font-weight: bold; 
+                                color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
+                                transition: opacity 0.3s ease;">
                                 Aviansoft private limited
                             </div>
                         </div>
@@ -238,13 +239,13 @@
 
                     <div class="single-brand" style="position: relative; display: inline-block;">
                         <div class="brand-overlay" style="position: relative;">
-                            <img src="assets/img/skyline.jpeg" alt="Skyline" width="200px"
+                            <img src="assets/img/skyline.jpeg" alt="Skyline" width="150px"
                                 style="transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
-                        position: absolute; bottom: 10px; left: 0; width: 100%;
-                        text-align: center; font-size: 16px; font-weight: bold; 
-                        color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
-                        transition: opacity 0.3s ease;">
+                                position: absolute; bottom: 10px; left: 0; width: 100%;
+                                text-align: center; font-size: 16px; font-weight: bold; 
+                                color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
+                                transition: opacity 0.3s ease;">
                                 Skyline infosys
                             </div>
                         </div>
@@ -255,10 +256,10 @@
                             <img src="assets/img/shamiit_logo.jpeg" alt="Shamiit" width="100px"
                                 style="height: 67px; margin-left: 40px; transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
-                        position: absolute; bottom: 10px; left: 0; width: 100%;
-                        text-align: center; font-size: 16px; font-weight: bold; 
-                        color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
-                        transition: opacity 0.3s ease;">
+                                position: absolute; bottom: 10px; left: 0; width: 100%;
+                                text-align: center; font-size: 16px; font-weight: bold; 
+                                color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
+                                transition: opacity 0.3s ease;">
                                 Shami Innovation and Technologies
                             </div>
                         </div>
@@ -269,10 +270,10 @@
                             <img src="assets/img/logo-Photoroom.png" alt="Photoroom" width="100px"
                                 style="margin-top: -15px; transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
-                        position: absolute; bottom: 10px; left: 0; width: 100%;
-                        text-align: center; font-size: 16px; font-weight: bold; 
-                        color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
-                        transition: opacity 0.3s ease;">
+                                position: absolute; bottom: 10px; left: 0; width: 100%;
+                                text-align: center; font-size: 16px; font-weight: bold; 
+                                color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
+                                transition: opacity 0.3s ease;">
                                 Coding Community
                             </div>
                         </div>
@@ -283,10 +284,10 @@
                             <img src="assets/img/skdreamcash.jpeg" alt="Skdreamcash" width="100px"
                                 style="height: 70px; transition: transform 0.3s ease;" />
                             <div class="brand-name" style="
-                        position: absolute; bottom: 10px; left: 0; width: 100%;
-                        text-align: center; font-size: 16px; font-weight: bold; 
-                        color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
-                        transition: opacity 0.3s ease;">
+                                position: absolute; bottom: 10px; left: 0; width: 100%;
+                                text-align: center; font-size: 16px; font-weight: bold; 
+                                color: white; background: rgba(0, 0, 0, 0.6); opacity: 0; 
+                                transition: opacity 0.3s ease;">
                                 Sk Dream Cash
                             </div>
                         </div>
@@ -344,6 +345,7 @@
         <!-- Contact Info End -->
 
     </main>
+
     <footer>
         <!-- Footer Start-->
         <div class="footer-area">
@@ -355,7 +357,7 @@
                                 <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
                                 <h4 style="color: white;">
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
+                                        style="color: white;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
                                 <p>485446,Nagod Satna Madhya Pradesh India</p>
 
