--- a/blog.html
+++ b/blog.html
@@ -434,64 +434,63 @@
         <!--================Blog Area =================-->
 
     </main>
-    <footer>
-        <!-- Footer Start-->
-        <div class="footer-area">
-            <div class="container">
-                <div class="footer-top footer-padding">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="footer-top-cap text-center">
-                                <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
-                                <h4 style="color: white;">
-                                    <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
-                                </h4>
-                                <p>485446,Nagod Satna Madhya Pradesh India</p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-bottom">
-                    <div class="row d-flex justify-content-between align-items-center">
-                        <div class="col-xl-9 col-lg-8">
-                            <div class="footer-copy-right">
-                                <p>
-                                    &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    Designed and Developed by <a href="#" target="_blank"
-                                        rel="noopener noreferrer">Dileep Kushwaha</a>
-                                </p>
-
-                            </div>
-
-                        </div>
-                        <div class="col-xl-3 col-lg-4">
-                            <!-- Footer Social -->
-                            <div class="footer-social f-right">
-                                <a>Stay Connected</a>
-                                <!-- Twitter Icon -->
-                                <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
-
-                                <a href="https://www.instagram.com/dileep0xkush/" target="_blank"><i
-                                        class="fab fa-instagram"></i></a>
-                                <!-- LinkedIn Icon -->
-                                <a href="https://www.linkedin.com/in/dileep-kushwaha-6457711a5/" target="_blank"><i
-                                        class="fab fa-linkedin"></i></a>
-                                <!-- GitHub Icon -->
-                                <a href="https://github.com/dileep0xKush" target="_blank"><i
-                                        class="fab fa-github"></i></a>
-                                <a href="https://wa.me/8357892218" target="_blank"><i class="fab fa-whatsapp"></i></a>
-
-                            </div>
+    <footer></footer>
+    <!-- Footer Start-->
+    <div class="footer-area">
+        <div class="container">
+            <div class="footer-top footer-padding">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="footer-top-cap text-center">
+                            <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
+                            <h4 style="color: white;">
+                                <a href="mailto:dileepkushwaha8090@gmail.com"
+                                    style="color: white;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
+                            </h4>
+                            <p>485446,Nagod Satna Madhya Pradesh India</p>
 
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="footer-bottom">
+                <div class="row d-flex justify-content-between align-items-center">
+                    <div class="col-xl-9 col-lg-8">
+                        <div class="footer-copy-right">
+                            <p>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved |
+                                Designed and Developed by <a href="#" target="_blank" rel="noopener noreferrer">Dileep
+                                    Kushwaha</a>
+                            </p>
+
+                        </div>
+
+                    </div>
+                    <div class="col-xl-3 col-lg-4">
+                        <!-- Footer Social -->
+                        <div class="footer-social f-right">
+                            <a>Stay Connected</a>
+                            <!-- Twitter Icon -->
+                            <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
+
+                            <a href="https://www.instagram.com/dileep0xkush/" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
+                            <!-- LinkedIn Icon -->
+                            <a href="https://www.linkedin.com/in/dileep-kushwaha-6457711a5/" target="_blank"><i
+                                    class="fab fa-linkedin"></i></a>
+                            <!-- GitHub Icon -->
+                            <a href="https://github.com/dileep0xKush" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://wa.me/8357892218" target="_blank"><i class="fab fa-whatsapp"></i></a>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Footer End-->
+    </div>
+    <!-- Footer End-->
     </footer>
     <!-- Scroll Up -->
     <div id="back-top">
