--- a/index.html
+++ b/index.html
@@ -292,14 +292,15 @@
 
                                         <div class="col-lg-4 col-md-4 col-sm-4">
                                             <div class="row">
+
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
-                                                    <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                    <div class="single-services mb-30 single-cat text-center mb-50"
+                                                        style="position: relative;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/auxilionetwork.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://auxilionetwork.com" class="view-button"
@@ -317,12 +318,12 @@
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
-                                                    <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                    <div class="single-services mb-30 single-cat text-center mb-50"
+                                                        style="position: relative;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/portbot.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://portboard.net" class="view-button"
@@ -338,12 +339,12 @@
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
-                                                    <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                    <div class="single-services mb-30 single-cat text-center mb-50"
+                                                        style="position: relative;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/mipaquete.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://mipaquete.net" class="view-button"
