--- a/portfolio.html
+++ b/portfolio.html
@@ -130,11 +130,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/auxilionetwork.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://auxilionetwork.com" class="view-button"
@@ -153,11 +152,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/portbot.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://portboard.net" class="view-button"
@@ -174,11 +172,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/mipaquete.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://mipaquete.net" class="view-button"
@@ -197,11 +194,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/abodio.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://abodio.ai" class="view-button"
@@ -219,11 +215,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/istotne.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://istotne.pl/boleslawiec" class="view-button"
@@ -242,11 +237,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/atithibhavan.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://www.atithibhavan.com" class="view-button"
@@ -265,11 +259,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/caronphone.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://www.caronphone.com" class="view-button"
@@ -287,11 +280,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/cipherwebinfotech.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://www.cipherwebinfotech.com"
@@ -309,11 +301,10 @@
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/codingcommunity.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://codingcommunity.in" class="view-button"
@@ -325,18 +316,15 @@
                                                 </div>
                                             </div>
                                         </div>
-
-
                                         <div class="col-lg-4 col-md-4 col-sm-4">
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <!-- Single Project -->
                                                     <div class="single-services mb-30" style="position: relative;">
-                                                        <div class="image-container"
-                                                            style="position: relative; width: 370px; height: 370px;">
+                                                        <div class="image-container">
 
                                                             <img src="assets/img/project/skdreamcash.png"
-                                                                style="width: 100%; height: 100%;"
+                                                                style="border-radius: 10px;width: 100%;height: 100%;"
                                                                 style="border: 2px solid #000;" alt="Project Image">
 
                                                             <a href="https://www.skdreamcash.in" class="view-button"
@@ -361,6 +349,7 @@
         </section>
 
     </main>
+
     <footer>
         <!-- Footer Start-->
         <div class="footer-area">
@@ -372,7 +361,7 @@
                                 <span><a href="javascript:void(0)">Dileep Kushwaha</a></span>
                                 <h4 style="color: white;">
                                     <a href="mailto:dileepkushwaha8090@gmail.com"
-                                        style="color: white; text-decoration: none;">dileepkushwaha8090@gmail.com</a>
+                                        style="color: white;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                                 </h4>
                                 <p>485446,Nagod Satna Madhya Pradesh India</p>
 
