add service image and skill image

--- a/services.html
+++ b/services.html
@@ -110,7 +110,8 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-pen"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/web-development.png"
+                                        style="height: 50px;" alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="custom-web-development.html">Custom Web Development</a></h5>
@@ -122,7 +123,8 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-speaker"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/real-time.png"
+                                        style="margin-bottom: 10px;" alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="real-time-application.html">Real-Time Applications</a></h5>
@@ -135,7 +137,8 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-portfolio"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/api.png" style="height: 50px;"
+                                        alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="api-development-Integration.html">API Development & Integration</a></h5>
@@ -148,7 +151,8 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-portfolio"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/database-administrator.png"
+                                        style="margin-left: 10px;margin-bottom: 10px;" alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="database-design-optimization.html">Database Design & Optimization</a></h5>
@@ -157,13 +161,11 @@
                             </div>
                         </div>
                     </div>
-
-
-
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-portfolio"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/responsive.png"
+                                        style="margin-bottom: 10px;" alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="responsive-front-enddevelopment.html">Responsive Front-End Development</a>
@@ -179,7 +181,8 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat text-center mb-50">
                             <div class="cat-icon">
-                                <span class="flaticon-portfolio"></span>
+                                <span class="flaticon"><img src="assets/img/service icon/maintenance.png"
+                                        style="margin-bottom: 10px;" alt=""></span>
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="maintenance-support.html">Maintenance & Support</a></h5>
