--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
                             <p>Late talk with me</p>
                             <div class="send-cv">
                                 <a href="mailto:dileepkushwaha8090@gmail.com"
-                                    style="font-size: 22px">dileepkushwaha8090@gmail.com</a>
+                                    style="color: blue;font-size: 20px;">dileepkushwaha8090@gmail.com</a>
                             </div>
                         </div>
                     </div>
