--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
                         <a href="custom-web-development.html">
                             <div class="single-cat text-center mb-50">
                                 <div class="cat-icon">
-                                    <span class="flaticon-pen"></span>
+                                    <span class="flaticon"><img src="assets/img/service icon/web-development.png"
+                                            style="height: 50px;" alt=""></span>
                                 </div>
                                 <div class="cat-cap">
                                     <h5>Custom Web Development</h5>
@@ -208,7 +209,8 @@
                         <a href="real-time-application.html">
                             <div class="single-cat text-center mb-50">
                                 <div class="cat-icon">
-                                    <span class="flaticon-speaker"></span>
+                                    <span class="flaticon"><img src="assets/img/service icon/real-time.png"
+                                            style="margin-bottom: 10px;" alt=""></span>
                                 </div>
                                 <div class="cat-cap">
                                     <h5>Real-Time Applications</h5>
@@ -222,7 +224,8 @@
                         <a href="api-development-Integration.html">
                             <div class="single-cat text-center mb-50">
                                 <div class="cat-icon">
-                                    <span class="flaticon-portfolio"></span>
+                                    <span class="flaticon"><img src="assets/img/service icon/api.png"
+                                            style="height: 50px;" alt=""></span>
                                 </div>
                                 <div class="cat-cap">
                                     <h5>API Development & Integration</h5>
