--- a/skills.html
+++ b/skills.html
@@ -176,11 +176,15 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/React JS.png" alt="" style="
+                                                height: 50px;
+                                                width: 52;
+                                            ">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>React JS</h2>
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -200,15 +204,61 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-xl-4 mt-3">
                                 <div class="blog-wrapper">
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/apche.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>Apache</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/nginx.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Nginx</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/swagger.svg" alt="" style=" height: 50px;">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Swagger</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/jquery.png" alt="" style=" height: 50px;">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Jquery</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -219,10 +269,10 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/html.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>HTML</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -233,10 +283,10 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/css-.png" alt="" style=" height: 50px;">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>CSS</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -247,10 +297,10 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/bootstrap.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>Bootstrap</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -261,10 +311,10 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/git.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>Git</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -275,10 +325,25 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/bitbucket.png" alt="">
                                             </div>
                                             <div class="comment-person">
-                                                <h2>MySQL</h2>
+                                                <h2>Bitbucket</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/gitlab.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Gitlab</h2>
                                             </div>
                                         </div>
                                     </div>
@@ -293,11 +358,191 @@
         </section>
 
 
+        <!-- tool  -->
+
+
+        <!-- client-comments -->
+        <section class="client-comments">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-8 col-md-10">
+                        <!-- Section Tittle -->
+                        <div class="section-tittle mb-70">
+                            <h2>Professional Tool i Use</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- latest-blog-area start -->
+            <div class="latest-blog-area">
+                <div class="container">
+                    <div class="custom-row">
+                        <!-- Removed the slider functionality and simplified the structure -->
+                        <div class="row">
+                            <!-- single-items -->
+                            <div class="col-xl-4">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/jira.png" style="height: 50px;" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Jira</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single-items -->
+                            <div class="col-xl-4">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/slack.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Slack</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single-items -->
+                            <div class="col-xl-4">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/trello.png" style="height: 52px;" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Trello</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single-items -->
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/planner.png" alt="" style="
+                                                height: 50px;
+                                                width: 52;
+                                            ">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Planner</h2>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/outlook.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Outlook</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/teams.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Teams</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/skype.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Skype</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/postman.png" alt="" style=" height: 50px;">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Postman</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/visual-studio.png" alt=""
+                                                    style=" height: 50px;">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Visual Studio</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 mt-3">
+                                <div class="blog-wrapper">
+                                    <div class="blog-inner">
+                                        <div class="blog-top">
+                                            <div class="person-img">
+                                                <img src="assets/img/tool/sublime-text.png" alt="">
+                                            </div>
+                                            <div class="comment-person">
+                                                <h2>Sublime Text</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- Removed blog-active class and made it a simple grid layout -->
+                    </div>
+                </div>
+            </div>
+            <!-- End latest-blog-area -->
+        </section>
 
         <!-- skills -->
-
-
-
 
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
